logs/pyivi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyivi'...
Listing './lib/python3.5/site-packages/pyivi/ivic'...
Compiling './lib/python3.5/site-packages/pyivi/ivic/definesivifgen.py'...
***   File "./lib/python3.5/site-packages/pyivi/ivic/definesivifgen.py", line 34
    cls._new_attr('output_mode',                (IVI_CLASS_PUBLIC_ATTR_BASE + 1L)  ,'ViInt32',False,False,False)
                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyivi/ivic/definesiviscope.py'...
***   File "./lib/python3.5/site-packages/pyivi/ivic/definesiviscope.py", line 34
    cls._new_attr('vertical_range',            (IVI_CLASS_PUBLIC_ATTR_BASE  + 1L)  ,'ViReal64',True,False,False)
                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyivi/ivic/definesivispecan.py'...
***   File "./lib/python3.5/site-packages/pyivi/ivic/definesivispecan.py", line 35
    cls._new_attr('amplitude_units',                               (IVI_CLASS_PUBLIC_ATTR_BASE + 1L)   ,'ViInt32',False,False,False)
                                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyivi/ivic/ivispecan.py'...
***   File "./lib/python3.5/site-packages/pyivi/ivic/ivispecan.py", line 171
    IviCSpecAn._new_attr('trace_count', IVI_CLASS_PUBLIC_ATTR_BASE + 18L  ,'ViInt32',False,False,False)
                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyivi/ivicom'...
Listing './lib/python3.5/site-packages/pyivi/ivifactory'...
Compiling './lib/python3.5/site-packages/pyivi/ivifactory/__init__.py'...
***   File "./lib/python3.5/site-packages/pyivi/ivifactory/__init__.py", line 228
    print "instrument at address " + str(address) + " didn't reply in time..."
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyivi-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
